Put the fix to "broken swipe interaction for product gallery on small screens" back in
This reverts commit 835155954f99885a13de053732f0e148311d1926.

--- a/_css/components/_productPage.scss
+++ b/_css/components/_productPage.scss
@@ -36,10 +36,6 @@
   @include breakpoint(large down) {
     padding-right: 3rem;
   }
-
-  @include breakpoint (small only) {
-    height: 100%;
-  }
 }
 
 // Need specificity to override original bad positioning
